--- a/index.html
+++ b/index.html
@@ -1,135 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Barcode Scanner</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Barcode Scanner with Airtable</title>
   <style>
-    body { font-family: sans-serif; padding: 20px; background: #f9f9f9; }
-    #scanner-container { width: 100%; max-width: 400px; margin: 0 auto; }
-    #scanned-users { margin-top: 20px; }
-    #scanned-users ul { list-style: none; padding: 0; }
-    #scanned-users li { background: #e0e0e0; margin: 5px 0; padding: 10px; border-radius: 5px; }
-    button { margin-top: 20px; padding: 10px 20px; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    video {
+      width: 100%;
+      max-width: 500px;
+      border: 2px solid black;
+    }
+    #result {
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <h1>Scan User Barcodes</h1>
-  <div id="scanner-container"></div>
-  <div id="scanned-users">
-    <h2>Scanned Users:</h2>
-    <ul id="user-list"></ul>
-  </div>
-  <button id="submit-button">Submit Scanned Users</button>
 
-  <script>
-    const scannedBarcodes = new Set();
-    const scannedUsers = [];
+<h1>Scan Barcode</h1>
+<video id="video" autoplay></video>
+<div id="result">Waiting for scan...</div>
 
-    // Replace with your Airtable API key and base ID
-    const airtableApiKey = 'patWXpQpY63MBFyxB.fee4486fab31cb98fb562233bc4800245d78989a199ca4098b55162a8b9a4c7b';
-    const airtableBaseId = 'appTi77lekpU9tJpm';
-    const airtableTableName = 'Users - odlozitest V2';
+<script src="https://unpkg.com/@zxing/browser@0.1.1/umd/index.min.js"></script>
+<script>
+  const apiKey = 'YOUR_API_KEY'; // <-- paste your API Key
+  const baseId = 'YOUR_BASE_ID'; // <-- paste your Base ID
+  const tableName = 'Users'; // <-- your Airtable table name
 
-    // Initialize QuaggaJS
-    Quagga.init({
-      inputStream: {
-        name: "Live",
-        type: "LiveStream",
-        target: document.querySelector('#scanner-container'),
-        constraints: {
-          facingMode: "environment" // or user for front camera
-        },
-      },
-      decoder: {
-        readers: ["code_128_reader", "ean_reader", "ean_8_reader", "code_39_reader", "upc_reader", "upc_e_reader"]
-      },
-    }, function(err) {
-      if (err) {
-        console.error(err);
-        return;
-      }
-      Quagga.start();
-    });
+  const resultDiv = document.getElementById('result');
+  const codeReader = new ZXing.BrowserBarcodeReader();
+  const corsProxy = 'https://corsproxy.io/?';
 
-    // On barcode detected
-    Quagga.onDetected(async function(result) {
-      const code = result.codeResult.code;
-      if (scannedBarcodes.has(code)) {
-        console.log(`Barcode ${code} already scanned.`);
-        return;
-      }
+  codeReader
+    .getVideoInputDevices()
+    .then((videoInputDevices) => {
+      const selectedDeviceId = videoInputDevices[0].deviceId;
 
-      // Fetch user from Airtable
-      const user = await fetchUserByBarcode(code);
-      if (user) {
-        scannedBarcodes.add(code);
-        scannedUsers.push(user);
-        displayUser(user);
-      } else {
-        console.log(`No user found with barcode ${code}.`);
-      }
-    });
-
-    // Fetch user by barcode from Airtable
-    async function fetchUserByBarcode(barcode) {
-      const url = `https://api.airtable.com/v0/${airtableBaseId}/${airtableTableName}?filterByFormula={Barcode}='${barcode}'`;
-      const response = await fetch(url, {
-        headers: {
-          Authorization: `Bearer ${airtableApiKey}`
+      return codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result, err) => {
+        if (result) {
+          const barcode = result.text.trim();
+          resultDiv.textContent = `Scanned: ${barcode}`;
+          lookupInAirtable(barcode);
+          codeReader.reset(); // stop scanner after one scan
         }
       });
-      const data = await response.json();
-      if (data.records && data.records.length > 0) {
-        return data.records[0].fields;
-      }
-      return null;
-    }
-
-    // Display user in the list
-    function displayUser(user) {
-      const userList = document.getElementById('user-list');
-      const li = document.createElement('li');
-      li.textContent = user.Name;
-      userList.appendChild(li);
-    }
-
-    // Submit scanned users
-    document.getElementById('submit-button').addEventListener('click', async () => {
-      if (scannedUsers.length === 0) {
-        alert('No users scanned.');
-        return;
-      }
-
-      // Example: Submit to Airtable (you can customize this)
-      const url = `https://api.airtable.com/v0/${airtableBaseId}/ScannedUsers`;
-      const records = scannedUsers.map(user => ({
-        fields: {
-          Name: user.Name,
-          Barcode: user.Barcode
-        }
-      }));
-
-      const response = await fetch(url, {
-        method: 'POST',
-        headers: {
-          Authorization: `Bearer ${airtableApiKey}`,
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ records })
-      });
-
-      if (response.ok) {
-        alert(`Submitted ${scannedUsers.length} users.`);
-        // Reset
-        scannedBarcodes.clear();
-        scannedUsers.length = 0;
-        document.getElementById('user-list').innerHTML = '';
-      } else {
-        alert('Error submitting users.');
-      }
+    })
+    .catch((err) => {
+      console.error(err);
+      resultDiv.textContent = 'Error accessing camera.';
     });
-  </script>
+
+  function lookupInAirtable(barcode) {
+    const url = `${corsProxy}https://api.airtable.com/v0/${baseId}/${tableName}?filterByFormula={Barcode}='${barcode}'`;
+
+    fetch(url, {
+      headers: {
+        Authorization: `Bearer ${apiKey}`
+      }
+    })
+    .then(response => response.json())
+    .then(data => {
+      if (data.records.length > 0) {
+        const user = data.records[0].fields;
+        resultDiv.textContent = `Found: ${user.Name || 'Unnamed'} (Barcode: ${barcode})`;
+      } else {
+        resultDiv.textContent = `Not found: ${barcode}`;
+      }
+    })
+    .catch(error => {
+      console.error(error);
+      resultDiv.textContent = 'Error fetching data.';
+    });
+  }
+</script>
+
 </body>
 </html>
